# type_erasure_game_example

./: .clang-format  .gitignore  CMakeLists.txt  README.md  imgui.ini  type_erasure.cpp  vcpkg.json
builder/: CMakeLists.txt  main.cpp
cli/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/include/core/: equation_result.hpp  game.hpp  location.hpp  login.hpp  map.hpp  map_builder.hpp
core/src/: game.cpp  game_factory.hpp  game_model.cpp  game_model.hpp  grid_rules.cpp  grid_rules.hpp  login.cpp  map_builder.cpp  map_io.cpp  map_io.hpp  object.cpp  object.hpp  player.cpp  player.hpp  solution_rules.cpp  solution_rules.hpp  world_io.cpp  world_io.hpp
gui/: CMakeLists.txt  builder_editor.cpp  builder_editor.hpp  main.cpp  main_builder.cpp  main_game.cpp  shared.cpp  shared.hpp
maps/: assign.json  assign8.json  assignment1.json  equation_x_y.json  first.json  try_map.json  variable1.json  zero.json
test/: CMakeLists.txt  core_tests.cpp  test_solution_rules.cpp
users/: Casper.json  Eric.json  Leo.json
